save file added

--- a/ocean-front_modis.ipynb
+++ b/ocean-front_modis.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import netCDF4\n",
+    "import xarray as xr\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.basemap import Basemap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -17,13 +31,6 @@
     }
    ],
    "source": [
-    "import netCDF4\n",
-    "import xarray as xr\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.basemap import Basemap\n",
-    "\n",
     "# read the netcdf file\n",
     "nc = netCDF4.Dataset(\"sample_data_4.nc\", \"r\", format=\"NETCDF4\")\n",
     "\n",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -128,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_44321/2280265216.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/tmp/ipykernel_67061/2280265216.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
       "  sst_grad_mag = np.sqrt(sst_lat_grad ** 2 + sst_lon_grad ** 2)\n"
      ]
     },
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +221,7 @@
     "plt.colorbar(orientation=\"vertical\")\n",
     "plt.title(\"Magnitude of the Gradient in km\")\n",
     "\n",
+    "plt.savefig(\"sst-gradient.png\", dpi=300)\n",
     "plt.show()"
    ]
   }
